--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pygame-ce = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
