--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,37 @@ target-version = ['py38']
 profile = "black"
 
 [tool.mypy]
+## Config file:
+warn_unused_configs = true
+## Disallow dynamic typing:
+## Disallow the use of the dynamic 'Any' type under certain conditions.
+disallow_any_unimported = true  # additional to 'strict' config
+disallow_any_generics = true
+disallow_subclassing_any = true
+## Untyped definitions and calls:
+## Configure how untyped definitions and calls are handled.
+disallow_untyped_calls = true
 disallow_untyped_defs = true
-disallow_any_unimported = true
-no_implicit_optional = true
+disallow_incomplete_defs = true
 check_untyped_defs = true
-warn_return_any = true
-show_error_codes = true
+disallow_untyped_decorators = true
+## None and Optional handling:
+## Adjust how values of type 'None' are handled.
+no_implicit_optional = true  # additional to 'strict' config
+## Configuring warnings:
+## Detect code that is sound but redundant or problematic.
+warn_redundant_casts = true
 warn_unused_ignores = true
+warn_return_any = true
+warn_unreachable = true  # additional to 'strict' config
+## Miscellaneous strictness flags:
+no_implicit_reexport = true
+strict_equality = true
+strict_concatenate = true
+##  Configuring error messages:
+## Adjust the amount of detail shown in error messages.
+show_error_codes = true  # additional to 'strict' config
+pretty = true  # additional to 'strict' config
 
 [tool.ruff]
 # Enable flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes rules by default.
