--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,8 +61,9 @@ show_error_codes = true  # additional to 'strict' config
 pretty = true  # additional to 'strict' config
 
 [tool.ruff]
-# Enable flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes rules by default.
-select = ["COM", "D", "E", "F"]
+# Enable rulesets:
+# flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes, flake8-Future-Annotations
+select = ["COM", "D", "E", "F", "FA"]
 ignore = []
 
 [tool.ruff.pydocstyle]
