--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,9 +62,13 @@ pretty = true  # additional to 'strict' config
 
 [tool.ruff]
 # Enable rulesets:
-# flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes, flake8-Future-Annotations
-select = ["COM", "D", "E", "F", "FA"]
-ignore = []
+# flake8-ANNotations, flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes,
+# flake8-Future-Annotations
+select = ["ANN", "COM", "D", "E", "F", "FA"]
+
+# Ignore rules:
+#  Missing type annotation for `self` in method
+ignore = ["ANN101"]
 
 [tool.ruff.pydocstyle]
 convention = "numpy"
