--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,13 +62,16 @@ pretty = true  # additional to 'strict' config
 
 [tool.ruff]
 # Enable rulesets:
-# flake8-ANNotations, flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes,
-# flake8-Future-Annotations
-select = ["ANN", "COM", "D", "E", "F", "FA"]
-
+# flake8-ANNotations, flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes, flake8-Future-Annotations, flake8-bandit (S)
+select = ["ANN", "COM", "D", "E", "F", "FA", "S"]
 # Ignore rules:
-#  Missing type annotation for `self` in method
-ignore = ["ANN101"]
+# ANN101: Missing type annotation for `self` in method
+# D205: 1 blank line required between summary line and description
+ignore = ["ANN101", "D205"]
+
+[tool.ruff.per-file-ignores]
+# Use of `assert` detected
+"**/{tests}/*" = ["S101"]
 
 [tool.ruff.pydocstyle]
 convention = "numpy"
