--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pygame-ce = "^2.4.0"
 
 [tool.poetry.group.dev.dependencies]
+invoke = "^2.2.0"
 mypy = "^1.8.0"
 pre-commit = "^3.6.0"
 ruff = "^0.3.0"
@@ -63,8 +64,10 @@ select = ["ANN", "COM", "D", "E", "F", "FA", "S", "TCH"]
 ignore = ["ANN101", "COM812", "D205"]
 
 [tool.ruff.lint.per-file-ignores]
-# Use of `assert` detected
+# assert: fine in tests!
 "**/{tests}/*" = ["S101"]
+# any-type: used by Invoke
+"tasks.py" = ["ANN401"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
