--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ strict_concatenate = true
 show_error_codes = true  # additional to 'strict' config
 pretty = true  # additional to 'strict' config
 
-[tool.ruff]
+[tool.ruff.lint]
 # Enable rulesets:
 # flake8-ANNotations, flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes,
 # flake8-Future-Annotations, flake8-bandit (S), flake8-type-checking (TCH)
@@ -70,11 +70,11 @@ select = ["ANN", "COM", "D", "E", "F", "FA", "S", "TCH"]
 # D205: 1 blank line required between summary line and description
 ignore = ["ANN101", "D205"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # Use of `assert` detected
 "**/{tests}/*" = ["S101"]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
 [build-system]
