--- a/.github/workflows/python-poetry-package.yml
+++ b/.github/workflows/python-poetry-package.yml
@@ -38,3 +38,8 @@ jobs:
     - name: Lint with ruff
       # by default: exit with error if rule violations
       uses: chartboost/ruff-action@v1
+    - name: Format check with ruff
+      # by default: exit with error if rule violations
+      uses: chartboost/ruff-action@v1
+      with:
+        options: format
