--- a/.github/workflows/python-poetry-package.yml
+++ b/.github/workflows/python-poetry-package.yml
@@ -42,4 +42,4 @@ jobs:
       # by default: exit with error if rule violations
       uses: chartboost/ruff-action@v1
       with:
-        options: format
+        args: format
