--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ warn_unreachable = true  # additional to 'strict' config
 ## Miscellaneous strictness flags:
 no_implicit_reexport = true
 strict_equality = true
-strict_concatenate = true
+extra_checks = true
 ##  Configuring error messages:
 ## Adjust the amount of detail shown in error messages.
 show_error_codes = true  # additional to 'strict' config
