Fix: ruff isort rules not enabled

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,8 +55,8 @@ pretty = true  # additional to 'strict' config
 [tool.ruff.lint]
 # Enable rulesets:
 # flake8-ANNotations, flake8-COMmas, pyDocstyle, pycodestylE, pyFlakes,
-# flake8-Future-Annotations, flake8-bandit (S), flake8-type-checking (TCH)
-select = ["ANN", "COM", "D", "E", "F", "FA", "S", "TCH"]
+# flake8-Future-Annotations, Isort, flake8-bandit (S), flake8-Type-CHecking
+select = ["ANN", "COM", "D", "E", "F", "FA", "I", "S", "TCH"]
 # Ignore rules:
 # ANN101: Missing type annotation for `self` in method
 # COM812: missing-trailing-comma
