--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,9 +69,10 @@ ignore = ["COM812", "ISC001", "ANN101", "ANN102", "D205", "ERA001", "FIX002", "T
 
 [tool.ruff.lint.per-file-ignores]
 # Ignore rules that aren't relevant in tests:
-#   PLR2004: Magic value used in comparison: fine in tests
-#   S101: Use of assert detected: fine in tests
-"tests/*" = ["PLR2004", "S101"]
+#   PLR2004: Magic value used in comparison
+#   S101: Use of assert detected
+#   SLF001 Private member accessed
+"tests/*" = ["PLR2004", "S101", "SLF001"]
 # Ignore rules for Invoke command-line tooling:
 #   ANN401: Dynamically typed expressions (typing.Any)
 #   T201 `print` found
