--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,9 @@ ignore = ["COM812", "ISC001", "ANN101", "ANN102", "D205", "ERA001", "FIX002", "T
 #   ANN401: Dynamically typed expressions (typing.Any)
 #   T201 `print` found
 "tasks.py" = ["ANN401", "T201"]
+# Ignore rules that conflict with Mypy
+#   PLC0414 Import alias does not rename original package
+"__init__.py" = ["PLC0414"]
 
 [tool.ruff.lint.pylint]
 max-args = 7
