--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,32 +63,38 @@ arg-type-hints-in-docstring = false
 select = ["ALL"]
 
 # Ignore rules that conflict with Ruff formatter:
-#   COM812: Trailing comma missing
-#   ISC001: Implicitly concatenated string literals on one line
-# Ignore other rules:
-#   ANN101: Missing type annotation for `self` in method
-#   ANN102: Missing type annotation for `cls` in classmethod
-#   D205: 1 blank line required between summary line and description
-#   ERA001 Found commented-out code
-#   FIX002: Line contains TODO, consider resolving the issue
-#   TD002: Missing author in TODO
-#   TD003: Missing issue link on the line following this TODO
-ignore = ["COM812", "ISC001", "ANN101", "ANN102", "D205", "ERA001", "FIX002", "TD002", "TD003" ]
+#   COM812 Trailing comma missing
+#   ISC001 Implicitly concatenated string literals on one line
 
-# Allow applying these 'unsafe' fixes without the `--unsafe-fixes` flag
-#    TCH001: Move application import into a type-checking block
-extend-safe-fixes = ["TCH001"]
+# Ignore other rules:
+#   ANN101 Missing type annotation for `self` in method
+#   ANN102 Missing type annotation for `cls` in classmethod
+#   D205 1 blank line required between summary line and description
+#   ERA001 Found commented-out code
+#   FIX002 Line contains TODO, consider resolving the issue
+#   SLF001 Private member accessed
+#   TD002 Missing author in TODO
+#   TD003 Missing issue link on the line following this TODO
+ignore = ["COM812", "ISC001", "ANN101", "ANN102", "D205", "ERA001", "FIX002",  "SLF001",
+    "TD002", "TD003"]
+
+# Allow applying these 'unsafe' fixes without the `--unsafe-fixes` flag:
+#    TCH001 Move import into a type-checking block
+#    TCH004 Move import out of type-checking block
+extend-safe-fixes = ["TCH001", "TCH004"]
 
 [tool.ruff.lint.per-file-ignores]
 # Ignore rules that aren't relevant in tests:
-#   PLR2004: Magic value used in comparison
-#   S101: Use of assert detected
+#   PLR2004 Magic value used in comparison
+#   S101 Use of assert detected
 #   SLF001 Private member accessed
 "tests/*" = ["PLR2004", "S101", "SLF001"]
+
 # Ignore rules for Invoke command-line tooling:
-#   ANN401: Dynamically typed expressions (typing.Any)
+#   ANN401 Dynamically typed expressions (typing.Any)
 #   T201 `print` found
 "tasks.py" = ["ANN401", "T201"]
+
 # Ignore rules that conflict with Mypy
 #   PLC0414 Import alias does not rename original package
 "__init__.py" = ["PLC0414"]
