--- a/.github/workflows/python-poetry-package.yml
+++ b/.github/workflows/python-poetry-package.yml
@@ -1,7 +1,9 @@
-# Install Poetry, the project and its dependencies, run tests and type checking with a
-# single version of Python.
+# uv-based; lint, format, test with a single Python version on Ubuntu Linux
 
-name: Python application with Poetry
+name: Python application with uv
+
+permissions:
+  contents: read
 
 on:
   push:
@@ -11,29 +13,30 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v5
+
+    - name: Install uv and set the python version
+      uses: astral-sh/setup-uv@v5
       with:
-        python-version: "3.12"
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
-    - name: Install project
-      run: poetry install
-    - name: Lint with ruff
-      # by default, exit with error if rule violations.
-      run: poetry run ruff check
-    - name: Format check with ruff
-      # by default, exit with error if the code is not properly formatted.
-      run: poetry run ruff format --check --diff
-    - name: Check typing with mypy
-      run: poetry run mypy .
-    - name: Test with pytest
-      run: poetry run pytest
+        version: "0.8.8"
+        python-version: 3.12
+
+    - name: Install the project and locked dependencies
+      run: uv sync --locked  # Includes `dev` group by default
+
+    - name: Run tests
+      run: uv run pytest .
+
+    - name: Check format with ruff
+      # Exit with error if the code is not properly formatted
+      run: uv run ruff format --check --diff
+
+    - name: Check linting with ruff
+      # Exit with error if the code has issues
+      run: uv run ruff check --output-format github
+
+    - name: Check typing
+      run: uv run mypy .
