--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ style = 'numpy'
 arg-type-hints-in-signature = true
 arg-type-hints-in-docstring = false
 
+[tool.ruff]
+target-version = "py312"  # Not inferred from poetry-style pyproject.toml
+
 [tool.ruff.lint]
 select = ["ALL"]
 
