--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ pdoc = ">=14.7.0"
 pre-commit = ">=3.8.0"
 pydoclint = ">=0.4.1"
 pydoctest = ">=0.1.22"
-ruff = ">=0.6.7"
+ruff = "^0.8.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = ">=8.0.2"
@@ -65,45 +65,45 @@ arg-type-hints-in-docstring = false
 select = ["ALL"]
 
 ignore = [
-# Ignore rules that conflict with Ruff formatter:
-#   COM812 Trailing comma missing
-#   ISC001 Implicitly concatenated string literals on one line
-"COM812", "ISC001",
+# Rules that conflict with Ruff formatter:
+"COM812",  # Trailing comma missing
+"ISC001",  # Implicitly concatenated string literals on one line
 
-# Ignore other rules:
-#   ANN101 Missing type annotation for `self` in method
-#   ANN102 Missing type annotation for `cls` in classmethod
-#   ANN401 any-type [in function args]
-#     Appropriate to use for *args, **kwargs
-#   D105 Missing docstring in magic method
-#   D205 1 blank line required between summary line and description
-#   ERA001 Found commented-out code
-#   FIX002 Line contains TODO, consider resolving the issue
-#   TD002 Missing author in TODO
-#   TD003 Missing issue link on the line following this TODO
-"ANN101", "ANN102", "ANN401", "D105", "D205", "ERA001", "FIX002", "TD002", "TD003"
+# Other:
+"ANN401",  # any-type [in function args]
+# - Appropriate to use for *args, **kwargs
+"D105",  # Missing docstring in magic method
+"D205",  # 1 blank line required between summary line and description
+"ERA001",  # Found commented-out code
+"FIX002",  # Line contains TODO, consider resolving the issue
+"TD002",  # Missing author in TODO
+"TD003",  # Missing issue link on the line following this TODO
 ]
 
 # Allow applying these 'unsafe' fixes without the `--unsafe-fixes` flag:
-#    TCH001 Move import into a type-checking block
-#    TCH004 Move import out of type-checking block
-extend-safe-fixes = ["TCH001", "TCH004"]
+extend-safe-fixes = [
+"TCH001",  # Move import into a type-checking block
+"TCH004",  # Move import out of type-checking block
+]
 
 [tool.ruff.lint.per-file-ignores]
-# Ignore rules that aren't relevant in tests:
-#   PLR2004 Magic value used in comparison
-#   S101 Use of assert detected
-#   SLF001 Private member accessed
-"tests/*" = ["PLR2004", "S101", "SLF001"]
+# Not relevant in tests:
+"tests/*" = [
+"PLR2004",  # Magic value used in comparison
+"S101",  # Use of assert detected
+"SLF001",  # Private member accessed
+]
 
 # Ignore rules for Invoke command-line tooling:
-#   ANN401 Dynamically typed expressions (typing.Any)
-#   T201 `print` found
-"tasks.py" = ["ANN401", "T201"]
+"tasks.py" = [
+"ANN401",  # Dynamically typed expressions (typing.Any)
+"T201",  # `print` found
+]
 
-# Ignore rules that conflict with Mypy
-#   PLC0414 Import alias does not rename original package
-"__init__.py" = ["PLC0414"]
+# Ignore rules that conflict with Mypy:
+"__init__.py" = [
+"PLC0414",  # Import alias does not rename original package
+]
 
 [tool.ruff.lint.pylint]
 max-args = 7
