--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "two-d-game-ai"
-version = "0.5.0"
+version = "0.6.0"
 description = ""
 authors = ["elliot-100 <3186037+elliot-100@users.noreply.github.com>"]
 readme = "README.md"
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.11, <4"
 # pydoclint dep docstring-parser-fork requires python < 4
 pygame-ce = ">=2.5.0"
+poetry = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
 invoke = "^2.0.0"
