--- a/.github/workflows/python-poetry-package.yml
+++ b/.github/workflows/python-poetry-package.yml
@@ -26,20 +26,14 @@ jobs:
         virtualenvs-create: true
         virtualenvs-in-project: true
     - name: Install project
-      run: poetry install --without dev
-    - name: Test with pytest
-      run: |
-        source $VENV
-        pytest
-    - name: Check typing with mypy
-      run: |
-        source $VENV
-        mypy .
+      run: poetry install
     - name: Lint with ruff
-      # by default: exit with error if rule violations
-      uses: chartboost/ruff-action@v1
+      # by default, exit with error if rule violations.
+      run: poetry run ruff check
     - name: Format check with ruff
-      # by default: exit with error if rule violations
-      uses: chartboost/ruff-action@v1
-      with:
-        args: format
+      # by default, exit with error if the code is not properly formatted.
+      run: poetry run ruff format --check --diff
+    - name: Check typing with mypy
+      run: poetry run mypy .
+    - name: Test with pytest
+      run: poetry run pytest
