--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ ignore = [
 "D105",  # Missing docstring in magic method
 "D205",  # 1 blank line required between summary line and description
 "FIX002",  # Line contains TODO, consider resolving the issue
+"S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
 "TD002",  # Missing author in TODO
 "TD003",  # Missing issue link on the line following this TODO
 ]
