--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,29 @@
-[tool.poetry]
+[project]
 name = "two-d-game-ai"
 version = "0.7.0"
 description = ""
-authors = ["elliot-100 <3186037+elliot-100@users.noreply.github.com>"]
+authors = [
+    {name="elliot-100", email="<3186037+elliot-100@users.noreply.github.com>"}
+]
 readme = "README.md"
+requires-python = ">=3.11"
+dependencies = [
+    "pygame-ce>=2.5.0"
+]
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4"
 # pydoclint dep docstring-parser-fork requires python < 4
-pygame-ce = ">=2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 invoke = "^2.2.0"
 mypy = "^1.15.0"
 pdoc = "^15.0.1"
-pre-commit = "^4.1.0"
+pre-commit = "^4.2.0"
 pydoclint = "^0.6.2"
 pydoctest = "^0.2.1"
-pytest = "^8.3.4"
-ruff = "^0.11.0"
+pytest = "^8.3.5"
+ruff = "^0.11.2"
 
 [tool.mypy]
 strict = true
@@ -40,9 +45,6 @@ pretty = true  # additional to 'strict' config
 style = 'numpy'
 arg-type-hints-in-signature = true
 arg-type-hints-in-docstring = false
-
-[tool.ruff]
-target-version = "py312"  # Not inferred from poetry-style pyproject.toml
 
 [tool.ruff.lint]
 select = ["ALL"]
