--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "loguru (>=0.7.3,<0.8.0)",
-    "pygame-ce>=2.5.0",
+    "loguru >=0.7.3",
+    "pygame-ce>=2.5.3",
 ]
 
 [tool.poetry.dependencies]
