--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,17 +14,17 @@ dependencies = [
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4"
-# pydoclint dep docstring-parser-fork requires python < 4
+# loguru, pydoclint dep docstring-parser-fork requires python < 4
 
 [tool.poetry.group.dev.dependencies]
 invoke = "^2.2.0"
-mypy = "^1.15.0"
-pdoc = "^15.0.3"
+mypy = "^1.16.0"
+pdoc = "^15.0.4"
 pre-commit = "^4.2.0"
 pydoclint = "^0.6.6"
 pydoctest = "^0.2.1"
-pytest = "^8.3.5"
-ruff = "^0.11.9"
+pytest = "^8.4.0"
+ruff = "^0.11.12"
 
 [tool.mypy]
 strict = true
